updating header to mobile navbar and fixing issue on ios

--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -8,17 +8,67 @@
 
         .links-wrapper {
             text-align: end;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            a {
+                margin: 3px 0;
+                white-space: nowrap;
+            }
         }
 
         .hideForMobile {
-            display: none;
+            // display: none;
+        }
+
+        .hamburger {
+            z-index: 999;
+        }
+
+        .mobile-menu {
+            position: fixed;
+            margin: auto;
+            top: -100vh;
+            left: 0;
+            right: 0;
+            // bottom: 0;
+            height: 100vh;
+            background-color: white;
+            transition: all 125ms ease-in-out;
+            // transform: scale(0);
+
+            &.showing {
+                top: 0;
+                // transform: scale(1);
+            }
+            
+            .wrapper {
+                
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                height: 100%;
+
+                a {
+                    margin: 30px auto;
+                    text-decoration: none;
+                    font-weight: 600;
+                    display: flex;
+                    align-items: center;
+                    color: rgb(16, 77, 152)!important;
+
+                    &:hover {
+                        opacity: 0.75;
+                    }
+                }
+            }
         }
     }
 
 
     .logo-wrapper{
         img {
-            height: 1.5rem!important; 
+            height: 2.2rem!important; 
         }
     }
 
